--- a/templates/search.html
+++ b/templates/search.html
@@ -1,15 +1,22 @@
 <!-- wp:template-part {"slug":"header","theme":"segun","tagName":"header","className":"shadow"} /-->
-<!-- wp:html -->
-<!-- Page Header -->
-<div class="wp-block-udemy-plus-page-header">
-    <div class="inner-page-header">
-      <h1>Category: Cats</h1>
-    </div>
-  </div>
-<!-- /wp:html -->
+
 <!-- wp:columns {"style":{"spacing":{"blockGap":{"left":"4rem"},"margin":{"top":"4rem","bottom":"4rem"}}},"className":"container !mx-auto"} -->
 <div class="wp-block-columns container !mx-auto" style="margin-top:4rem;margin-bottom:4rem"><!-- wp:column {"width":"66.66%"} -->
-    <div class="wp-block-column" style="flex-basis:66.66%"><!-- wp:query {"queryId":11,"query":{"perPage":10,"pages":0,"offset":0,"postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":true}} -->
+    <div class="wp-block-column" style="flex-basis:66.66%">
+    <!-- wp:html -->
+        <!-- Search Block -->
+              <div class="wp-block-udemy-plus-search-form">
+                <h1>Search: Your search term here</h1>
+                <form>
+                  <input type="text" placeholder="Search" />
+                  <div class="btn-wrapper">
+                    <button type="submit">Search</button>
+                  </div>
+                </form>
+              </div>
+    <!-- /wp:html -->
+    
+    <!-- wp:query {"queryId":11,"query":{"perPage":10,"pages":0,"offset":0,"postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":true}} -->
     <div class="wp-block-query"><!-- wp:post-template -->
     <!-- wp:columns {"style":{"spacing":{"padding":{"bottom":"2.5rem"},"margin":{"bottom":"2.48rem"},"blockGap":{"left":"4rem"}}}} -->
     <div class="wp-block-columns" style="margin-bottom:2.48rem;padding-bottom:2.5rem"><!-- wp:column {"width":"33.33%"} -->
