--- a/templates/search.html
+++ b/templates/search.html
@@ -1,67 +1,55 @@
 <!-- wp:template-part {"slug":"header","theme":"segun","tagName":"header","className":"shadow"} /-->
 
-<!-- wp:columns {"style":{"spacing":{"blockGap":{"left":"4rem"},"margin":{"top":"4rem","bottom":"4rem"}}},"className":"container !mx-auto"} -->
+<!-- wp:columns {"className":"container !mx-auto","style":{"spacing":{"blockGap":{"left":"4rem"},"margin":{"top":"4rem","bottom":"4rem"}}}} -->
 <div class="wp-block-columns container !mx-auto" style="margin-top:4rem;margin-bottom:4rem"><!-- wp:column {"width":"66.66%"} -->
-    <div class="wp-block-column" style="flex-basis:66.66%">
-    <!-- wp:html -->
-        <!-- Search Block -->
-              <div class="wp-block-udemy-plus-search-form">
-                <h1>Search: Your search term here</h1>
-                <form>
-                  <input type="text" placeholder="Search" />
-                  <div class="btn-wrapper">
-                    <button type="submit">Search</button>
-                  </div>
-                </form>
-              </div>
-    <!-- /wp:html -->
-    
-    <!-- wp:query {"queryId":11,"query":{"perPage":10,"pages":0,"offset":0,"postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":true}} -->
-    <div class="wp-block-query"><!-- wp:post-template -->
-    <!-- wp:columns {"style":{"spacing":{"padding":{"bottom":"2.5rem"},"margin":{"bottom":"2.48rem"},"blockGap":{"left":"4rem"}}}} -->
-    <div class="wp-block-columns" style="margin-bottom:2.48rem;padding-bottom:2.5rem"><!-- wp:column {"width":"33.33%"} -->
-    <div class="wp-block-column" style="flex-basis:33.33%"><!-- wp:post-author {"avatarSize":24,"style":{"spacing":{"margin":{"bottom":"0.5rem"}}},"textColor":"veci-gray-700","className":"post-author"} /-->
-    
-    <!-- wp:post-title {"isLink":true,"style":{"elements":{"link":{"color":{"text":"var:preset|color|veci-gray-700"}}},"typography":{"lineHeight":"1.8","fontStyle":"normal","fontWeight":"700"},"spacing":{"margin":{"bottom":"0.5rem"}}},"fontSize":"medium"} /-->
-    
-    <!-- wp:post-date {"isLink":true,"style":{"elements":{"link":{"color":{"text":"var:preset|color|veci-gray-500"}}}}} /--></div>
-    <!-- /wp:column -->
-    
-    <!-- wp:column {"width":"66.66%","className":"!mt-0"} -->
-    <div class="wp-block-column !mt-0" style="flex-basis:66.66%"><!-- wp:post-featured-image {"isLink":true,"width":"100%","style":{"spacing":{"margin":{"bottom":"1rem"}}},"className":"rounded-lg overflow-hidden"} /-->
-    
-    <!-- wp:group {"style":{"elements":{"link":{"color":{"text":"var:preset|color|veci-gray-500"}}},"typography":{"fontSize":"0.88rem"},"spacing":{"padding":{"bottom":"1rem"},"blockGap":"4rem"}},"textColor":"veci-gray-500","layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"space-between"}} -->
-    <div class="wp-block-group has-veci-gray-500-color has-text-color has-link-color" style="padding-bottom:1rem;font-size:0.88rem"><!-- wp:post-terms {"term":"post_tag"} /-->
-    
-    <!-- wp:comments -->
-    <div class="wp-block-comments"><!-- wp:comments-title {"showPostTitle":false,"className":"bi post-comment-count"} /--></div>
-    <!-- /wp:comments --></div>
-    <!-- /wp:group -->
-    
-    <!-- wp:post-excerpt {"style":{"typography":{"fontSize":"0.88rem"}}} /--></div>
-    <!-- /wp:column --></div>
-    <!-- /wp:columns -->
-    <!-- /wp:post-template -->
-    
-    <!-- wp:query-pagination {"paginationArrow":"chevron","style":{"elements":{"link":{"color":{"text":"var:preset|color|veci-gray-500"}}}},"layout":{"type":"flex","justifyContent":"space-between","flexWrap":"nowrap"}} -->
-    <!-- wp:query-pagination-previous {"className":"rounded-md py-2 px-4 block transition-all hover:bg-gray-100"} /-->
-    
-    <!-- wp:query-pagination-next {"className":"rounded-md py-2 px-4 block transition-all hover:bg-gray-100"} /-->
-    <!-- /wp:query-pagination -->
-    
-    <!-- wp:query-no-results -->
-    <!-- wp:paragraph {"placeholder":"Add text or blocks that will display when a query returns no results."} -->
-    <p></p>
-    <!-- /wp:paragraph -->
-    <!-- /wp:query-no-results --></div>
-    <!-- /wp:query --></div>
-    <!-- /wp:column -->
-    
-    <!-- wp:column {"width":"33.33%"} -->
-    <div class="wp-block-column" style="flex-basis:33.33%"><!-- wp:group {"layout":{"type":"flex","flexWrap":"nowrap"}} -->
-    <div class="wp-block-group"><!-- wp:template-part {"slug":"sidebar","theme":"segun"} /--></div>
-    <!-- /wp:group --></div>
-    <!-- /wp:column --></div>
-    <!-- /wp:columns -->
-    
-    <!-- wp:template-part {"slug":"footer","theme":"segun","tagName":"footer","className":"bg-gray-700 p-16"} /-->
+  <div class="wp-block-column" style="flex-basis:66.66%"><!-- wp:veci-plus/search-form {"bgColor":"rgb(67 56 202)"} /-->
+  
+  <!-- wp:query {"queryId":11,"query":{"perPage":10,"pages":0,"offset":0,"postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":true}} -->
+  <div class="wp-block-query"><!-- wp:post-template -->
+  <!-- wp:columns {"style":{"spacing":{"padding":{"bottom":"2.5rem"},"margin":{"bottom":"2.48rem"},"blockGap":{"left":"4rem"}}}} -->
+  <div class="wp-block-columns" style="margin-bottom:2.48rem;padding-bottom:2.5rem"><!-- wp:column {"width":"33.33%"} -->
+  <div class="wp-block-column" style="flex-basis:33.33%"><!-- wp:post-author {"avatarSize":24,"className":"post-author","style":{"spacing":{"margin":{"bottom":"0.5rem"}}},"textColor":"veci-gray-700"} /-->
+  
+  <!-- wp:post-title {"isLink":true,"style":{"elements":{"link":{"color":{"text":"var:preset|color|veci-gray-700"}}},"typography":{"lineHeight":"1.8","fontStyle":"normal","fontWeight":"700"},"spacing":{"margin":{"bottom":"0.5rem"}}},"fontSize":"medium"} /-->
+  
+  <!-- wp:post-date {"isLink":true,"style":{"elements":{"link":{"color":{"text":"var:preset|color|veci-gray-500"}}}}} /--></div>
+  <!-- /wp:column -->
+  
+  <!-- wp:column {"width":"66.66%","className":"!mt-0"} -->
+  <div class="wp-block-column !mt-0" style="flex-basis:66.66%"><!-- wp:post-featured-image {"isLink":true,"width":"100%","className":"rounded-lg overflow-hidden","style":{"spacing":{"margin":{"bottom":"1rem"}}}} /-->
+  
+  <!-- wp:group {"style":{"elements":{"link":{"color":{"text":"var:preset|color|veci-gray-500"}}},"typography":{"fontSize":"0.88rem"},"spacing":{"padding":{"bottom":"1rem"},"blockGap":"4rem"}},"textColor":"veci-gray-500","layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"space-between"}} -->
+  <div class="wp-block-group has-veci-gray-500-color has-text-color has-link-color" style="padding-bottom:1rem;font-size:0.88rem"><!-- wp:post-terms {"term":"post_tag"} /-->
+  
+  <!-- wp:comments -->
+  <div class="wp-block-comments"><!-- wp:comments-title {"showPostTitle":false,"className":"bi post-comment-count"} /--></div>
+  <!-- /wp:comments --></div>
+  <!-- /wp:group -->
+  
+  <!-- wp:post-excerpt {"style":{"typography":{"fontSize":"0.88rem"}}} /--></div>
+  <!-- /wp:column --></div>
+  <!-- /wp:columns -->
+  <!-- /wp:post-template -->
+  
+  <!-- wp:query-pagination {"paginationArrow":"chevron","style":{"elements":{"link":{"color":{"text":"var:preset|color|veci-gray-500"}}}},"layout":{"type":"flex","justifyContent":"space-between","flexWrap":"nowrap"}} -->
+  <!-- wp:query-pagination-previous {"className":"rounded-md py-2 px-4 block transition-all hover:bg-gray-100"} /-->
+  
+  <!-- wp:query-pagination-next {"className":"rounded-md py-2 px-4 block transition-all hover:bg-gray-100"} /-->
+  <!-- /wp:query-pagination -->
+  
+  <!-- wp:query-no-results -->
+  <!-- wp:paragraph {"placeholder":"Add text or blocks that will display when a query returns no results."} -->
+  <p></p>
+  <!-- /wp:paragraph -->
+  <!-- /wp:query-no-results --></div>
+  <!-- /wp:query --></div>
+  <!-- /wp:column -->
+  
+  <!-- wp:column {"width":"33.33%"} -->
+  <div class="wp-block-column" style="flex-basis:33.33%"><!-- wp:group {"layout":{"type":"flex","flexWrap":"nowrap"}} -->
+  <div class="wp-block-group"><!-- wp:template-part {"slug":"sidebar","theme":"segun"} /--></div>
+  <!-- /wp:group --></div>
+  <!-- /wp:column --></div>
+  <!-- /wp:columns -->
+  
+  <!-- wp:template-part {"slug":"footer","theme":"segun","tagName":"footer","className":"bg-gray-700 p-16"} /-->
